# kahon-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/: bench.rs  extension.rs  monster.rs
src/: align.rs  bplus.rs  builder.rs  checkpoint.rs  config.rs  encode.rs  error.rs  frame.rs  lib.rs  raw_writer.rs  sink.rs  trailer.rs  types.rs  writer.rs
tests/: checkpoint.rs  containers.rs  errors.rs  extension.rs  golden.rs  invariants.rs  page_alignment.rs  property.rs  raw_writer.rs  scalars.rs  sum.rs  trailer.rs
tests/common/: driver.rs  encode.rs  mod.rs  reader.rs  walker.rs
tests/fixtures/: spec_7_5.json  spec_7_5.kahon
tests/fixtures/containers/: deep_nesting.json  deep_nesting.kahon  empty_array.kahon  empty_object.kahon  fanout2_array.fanout2.kahon  multi_run.fanout2.sortwin2.json  multi_run.fanout2.sortwin2.kahon  nested_mixed.json  nested_mixed.kahon
tests/fixtures/scalars/: bools_null.kahon  floats.json  floats.kahon  ints.json  ints.kahon  strings.json  strings.kahon
tests/fixtures/width_boundaries/: w0_small.json  w0_small.kahon  w1_promoted.json  w1_promoted.kahon  w2_promoted.json  w2_promoted.kahon
