[package]
name = "kahon"
version = "0.3.0"
edition = "2021"
description = "A Rust writer for the Kahon binary format."
license = "MIT"
repository = "https://github.com/jankdc/kahon-rs"
homepage = "https://github.com/jankdc/kahon"
documentation = "https://docs.rs/kahon"
readme = "README.md"
keywords = ["kahon", "json", "serialization", "streaming"]
categories = ["encoding", "data-structures"]
exclude = ["tests/", "examples/bench.rs", ".github/", ".gitignore"]

[lib]
path = "src/lib.rs"

[[example]]
name = "monster"
path = "examples/monster.rs"

[[example]]
name = "bench"
path = "examples/bench.rs"

[dev-dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
proptest = "1"
